force-app/main/default/objects/Extracurricular__c/Extracurricular__c.object-meta.xml
<CustomObject>
    <label>Extracurricular</label>
    <nameField>
        <label>Extracurricular Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extracurriculares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>