force-app/main/default/objects/Extracurricular__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arte</fullName>
            </value>
            <value>
                <fullName>Cultura</fullName>
            </value>
            <value>
                <fullName>Literatura</fullName>
            </value>
            <value>
                <fullName>Ciencias</fullName>
            </value>
            <value>
                <fullName>Naturaleza</fullName>
            </value>
            <value>
                <fullName>Música</fullName>
            </value>
            <value>
                <fullName>Estrategia</fullName>
            </value>
            <value>
                <fullName>Gastronomía</fullName>
            </value>
            <value>
                <fullName>Cine</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Bienestar</fullName>
            </value>
            <value>
                <fullName>Diversión</fullName>
            </value>
            <value>
                <fullName>Medio Ambiente</fullName>
            </value>
            <value>
                <fullName>Deporte</fullName>
            </value>
            <value>
                <fullName>Aventura</fullName>
            </value>
            <value>
                <fullName>Celebración</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Creatividad</fullName>
            </value>
            <value>
                <fullName>Liderazgo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>