force-app/main/default/objects/Extracurricular__c/recordTypes/Actividad.recordType-meta.xml
<RecordType>
    <fullName>Actividad</fullName>
    <active>true</active>
    <label>Actividad</label>
</RecordType>