force-app/main/default/objects/Extracurricular__c/recordTypes/Evento.recordType-meta.xml
<RecordType>
    <fullName>Evento</fullName>
    <active>true</active>
    <label>Evento</label>
</RecordType>